--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,6 +39,8 @@ jobs:
         RUST_TARGET=`rustup show active-toolchain | sed -e 's/[^-]*-\(.*\)\s.*/\1/'`
 
         CUR_DIR=$(pwd)
+        mkdir -p "${CUR_DIR}/artifacts"
+
         LIB_DIR='./target/x86_64-unknown-uefi/release'
         pushd "$LIB_DIR"
         FILES=$(find . -maxdepth 1 -type f -name '*.efi')
