--- a/rust/dhcp-option67/Cargo.toml
+++ b/rust/dhcp-option67/Cargo.toml
@@ -17,5 +17,5 @@ test = false
 bench = false
 
 [dependencies]
-uefi = "0.29.0"
+uefi = { version = "0.29.0", features = ["panic_handler"] }
 uefi-services = "0.25.0"
