--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     // Dev Container's Name.
     "name": "Rust",
     // Base Container Image.
-    "image": "mcr.microsoft.com/devcontainers/rust:1-1-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/rust:1-1-bookworm",
     // For running using Podman.
     // https://github.com/microsoft/vscode-remote-release/issues/4443
     "runArgs": [
